# sx1302_hal

./: CMakeLists.txt
libloragw/inc/: config.h.in  loragw_hal.h  loragw_i2c.h
libloragw/src/: loragw_hal.c
